--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -7,7 +7,9 @@
 
 #mainbar{
     background-color: #77a59c;
-    position: sticky;
+    position: absolute;
+    z-index: 1;
+    width: 101%;
     }
 
     p{
@@ -33,9 +35,7 @@
     z-index: 0;
     opacity: 0;
     transition-duration: 1s;
-    
-    
-}
+    }
 
 
 
@@ -140,3 +140,128 @@
     display: none;
 }
 
+/* slider */
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@100;300;400;500&display=swap');
+
+.swiper-container {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #30686e;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.sections {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sun,
+.safe,
+.ballon,
+.friends {
+    width: 100%;
+    height: 100vh;
+    padding: 0 80px;
+}
+
+.section_container {
+    width: 1170px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.sun {
+    background-color: #30334b;
+}
+
+.safe {
+    background-color: #fff;
+}
+
+.ballon {
+    background-color: #92B7FF;
+}
+
+.friends {
+    background-color: #000;
+}
+
+.image {
+    width: 600px;
+}
+
+.image > img {
+    width: 100%;
+}
+
+.text {
+    width: 350px;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+    text-align: left;
+
+}
+
+.text > .title {
+    font-size: 4rem; 
+    font-weight: bold;
+    margin-bottom: 50px;
+}
+
+.sun > .section_container > .text {
+    color: #fff;
+}
+
+.text > .description {
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+
+.safe > .section_container > .image {
+    order: 2;
+    width: 500px;
+}
+
+.safe > .text {
+    color: #000;
+}
+
+.friends > .section_container > .text > .title {
+    font-size: 45px;
+}
+
+.friends > .section_container > .text > .title > span {
+    font-weight: 500;
+}
+
+.friends > .section_container > .text {
+    color: #fff;
+}
+
+.swiper-container-horizontal>.swiper-pagination-progressbar.swiper-pagination-progressbar-opposite, 
+.swiper-container-vertical>.swiper-pagination-progressbar {
+    position: absolute;
+    left: 95%;
+    top: 25%;
+    height: 50%;
+}
